# python-project-template

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  post_create.sh
.github/: copilot-instructions.md
.github/workflows/: claude.yml  pytest.yml  ruff.yml  test.yml
tests/: test_sample.py
