[project]
name = "python-project-template"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["python-dotenv>=1.0.1"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 127
